# PokemonDetector

./: .dockerignore  .gitignore  CLAUDE.md  DISTRIBUTION_PACKAGE.md  Dockerfile  QUICKSTART_WINDOWS.md  README.md  TROUBLESHOOTING.md  USER_README.txt  WINDOWS_BUILD.md  app.py  build_windows.bat  diagnose.bat  diagnose_model.bat  docker-compose.yml  docker_dev.md  drop_image_here.bat  fix_model_file.bat  main.py  poke.bat  poke.spec  pyproject.toml  requirements.txt  test_file_exists.bat
app/: detector.ipynb  detector.py
cli/: main.py
demo-vercel/: .gitignore  .vercelignore  README.md  TROUBLESHOOTING.md  deploy-cli.sh  deploy.sh  vercel.json
demo-vercel/api/: index.py
demo-vercel/public/: index.html
deployment/: Dockerfile  docker-compose.yml  nginx.config
lib/: detector_core.py
models/: README.md
scripts/cli/: class_names.json  detector.py
webapp/: app.py
webapp/templates/: index.html
windows/: build_windows.bat  fix_model_file.bat  poke.spec
